# zenalpha

./: .gitignore  Dockerfile.agent  README.md  pyproject.toml
chanquant/: __init__.py
chanquant/agents/: alerter.py  bedrock.py  decision.py  langgraph_pipeline.py  nester.py  orchestrator.py  prompts.py  report.py  reviewer.py  scanner.py  state.py  tool_defs.py  tool_executor.py  tools.py
chanquant/api/: gateway.py  strategy_routes.py
chanquant/backtest/: engine.py  metrics.py  nesting_engine.py  portfolio.py  slippage.py  walk_forward.py
chanquant/cli/: main.py
chanquant/core/: center.py  divergence.py  fractal.py  kline.py  macd.py  nesting.py  objects.py  pipeline.py  segment.py  signal.py  stroke.py  trend.py
chanquant/data/: base.py  csv_loader.py  decision_store.py  polygon.py  timestream.py  ws_stream.py
chanquant/execution/: position.py
chanquant/risk/: conflict.py  manager.py  models.py
chanquant/scoring/: event_calendar.py  filter.py  outcome.py  regime.py  scorer.py
chanquant/strategy/: evaluator.py  models.py  (+1 more)
docs/: agent-evaluation-report.md  algorithm.md  architecture.md  data-format.md  deployment-guide-en.md  deployment-guide-zh.md  deployment-guide.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
scripts/: build-all.sh  bulk_ingest.py  deploy-k8s.sh  deploy.sh  init-db.sql  sync_polygon.py  sync_polygon_influxdb.py
services/: Dockerfile.builder  pom.xml
terraform/: k8s.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py
(+250 files in other folders)
