[project]
name = "zenalpha"
version = "0.1.0"
description = "缠论量化分析平台 — Signal Layer + Backtest Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.15",
    "rich>=13.9",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "boto3>=1.34",
    "influxdb-client>=1.40",
]
agents = [
    "langgraph>=0.2",
    "langchain-aws>=0.2",
    "langchain-core>=0.3",
]
streaming = [
    "massive>=1.0",
    "influxdb-client>=1.40",
]

[project.scripts]
zenalpha = "chanquant.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["chanquant"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
